# rtfm-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  devenv.nix  flake.nix  flyway.conf.example  pyproject.toml
.github/workflows/: lint_format.yml
db/: schema.sql
migrations/: V1__chunks_and_indexes_tables.sql  V2__index_name_unique_url_chunks.sql  V3__hnsw_and_index_id_indexes.sql  schema.hcl
scripts/: crawl4ai-docker.sh  init_db.sql  scrape_data.py  send_to_s3.py  store_scraped_data.py  test_mcp_server.py  visualize_embeddings.py
src/: main.py
src/api/v1/: master_router.py  schemas.py
src/api/v1/endpoints/: health.py  info.py  ingest.py  query.py
src/core/: config.py  constants.py
src/core/logging/: logger_formatter.py  logging.py  logging_config.json
src/mcp/: mcp_server.py  mcp_tools.py
src/models/: models.py
src/rag/: embedder.py  generator.py  pipeline.py
src/repositories/: chunk_repository.py  index_repository.py
src/services/: database_service.py  documentation_scraper.py  openai_service.py  s3_uploader.py  store_data.py
src/utils/: utils.py
tests/: conftest.py
tests/api/: health_endpoint_test.py  info_endpoint_test.py
