[project]
name = "rtfm-rag"
version = "0.1.0"
description = "rtfm-rag"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.2",
    "bs4>=0.0.2",
    "fake-useragent>=2.2.0",
    "fastapi[standard]>=0.115.12",
    "html2text>=2025.4.15",
    "html5lib>=1.1",
    "pydantic-settings>=2.9.1",
    "requests>=2.32.3",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
    "validators>=0.35.0",
]
