[project]
name = "rtfm-rag"
version = "0.1.0"
description = "rtfm-rag"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.7",
    "beautifulsoup4>=4.13.4",
    "boto3>=1.38.33",
    "fastapi[standard]>=0.115.12",
    "html2text>=2025.4.15",
    "mcp[cli]>=1.13.1",
    "openai>=1.83.0",
    "psycopg[binary,pool]>=3.2.9",
    "pydantic-settings>=2.9.1",
    "result>=0.17.0",
    "tiktoken>=0.9.0",
]

[dependency-groups]
dev = [
    "dash>=3.0.4",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "pytest>=8.4.1",
    "umap-learn>=0.5.7",
]

[tool.ruff]
indent-width = 2
